[package]
name = "loadwork"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
thiserror = "1.0.28"

# https://docs.rs/mongodb/2.0.2/mongodb/
# https://docs.rs/bson/2.0.1/bson/struct.Document.html
mongodb = { version = "2.0.2", features = [ "async-std-runtime", "bson-chrono-0_4" ], default_features = false }

async-std = { version = "1.10.0", features = ["attributes"] }
serde_json = "1.0.67"
serde = "1.0.130"
serde_with = "1.11.0"
chrono = "0.4.19"
static_init = "1.0.1"
regexm = "0.2.1"
rust-s3 = { version = "0.27.0-beta8", features = ["with-async-std"], default-features = false }
futures = "0.3.17"

[dev-dependencies]
assert_matches = "1.5.0"
serial_test = "0.5.1"
